Fix slider hidden overflow property.

--- a/css/unoSlider.css
+++ b/css/unoSlider.css
@@ -6,7 +6,6 @@
 }
 .unoSlider ul{
     list-style:none;
-    overflow:hidden;
     position:relative
 }
 .unoSliderNav span{
